implementado log level
